--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,14 +37,25 @@ body {
 }
 
 .hole {
-    display: block;
     padding-top: 1.2em;
-    background: url(../images/snow-pile-removebg.png) no-repeat bottom center ;
+    /* background: url(../images/snow-pile-removebg.png) no-repeat bottom center ; */
     position: relative;    
     overflow: hidden;
 }
 
-.hole.hole-4 {}
+/* pseudo-element styles from Wes Bos JavaScript 30 day Challenge */
+.hole:after {
+  display: block;
+  background: url(../images/snow-pile-removebg.png) no-repeat bottom center ;;
+  background-size: contain;
+  content: '';
+  width: 100%;
+  height:70px;
+  position: absolute;
+  z-index: 2;
+  bottom: -30px;
+}
+
 
 /* Walrus */
 
@@ -53,12 +64,14 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
-    transition: all 0.6s;
+    transition: all 1s;
+    transform: scale(0.9);
     top: 100%;
 }
 
-.walrus.up {
-    top: -15%;
+.hole.up .walrus  {
+    top: 0;
+    transform: scale(1);
 }
 
 /* Time and Score */
