--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,84 +1,219 @@
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Carter+One&family=Londrina+Shadow&family=Londrina+Sketch&family=Londrina+Solid&display=swap");
+
 *,
 html {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-*, *:before, *:after {
-    box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 body {
-    font-size: 16px;
-    background: url(../images/snow-rocks-alt.png);
+  font-size: 16px;
+  background: url(../images/snow-rocks.png);
 }
 
 .header-container {
-    margin-top: 3em;
-    background-color: #00fff0;
+  margin: 3em auto;
+  height: 6em;
+  background-color: #e9e9ec;
+  border: 2px solid #10100e;
+  border-radius: 20px;
+  position: relative;
+  box-shadow: 2px 2px 2px #c4b3a3;
+}
+
+.header-main {
+  color: #10100e;
+  position: absolute;
+  font-family: "Londrina Shadow", cursive;
+  font-size: 6em;
+  letter-spacing: 0.1em;
+  text-shadow: 2px 2px #c4b3a3;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
 
 .game-container {
-    height: 80vh;
-    background: url(../images/snow-hills.png) no-repeat right center;
-    
+  height: 65vh;
+  background: url(../images/iceberg.jpg) no-repeat right center;
+  border-radius: 20px;
 }
 
-.blank {
-    background-color: #000;
+footer {
+  background-color: #e9e9ec;
+  width: fit-content;
+  max-height: 100px;
+  margin: 1em auto;
+  font-family: "Amatic SC", cursive;
+  border-radius: 20px;
+}
+
+footer i {
+  color: #03798a;
+  margin: 0.5em;
 }
 
 /* Hole positions */
 
 .game-row {
-    padding-top: 4%;
-    height: 25%;
+  padding-top: 4%;
+  height: 25%;
+  position: relative;
 }
 
 .hole {
-    padding-top: 1.2em;
-    /* background: url(../images/snow-pile-removebg.png) no-repeat bottom center ; */
-    position: relative;    
-    overflow: hidden;
+  overflow: hidden;
 }
 
-/* pseudo-element styles from Wes Bos JavaScript 30 day Challenge */
+/* pseudo-element styles from Wes Bos JavaScript 30 day Challenge to solve issue with walruses not popping up in right place*/
 .hole:after {
   display: block;
-  background: url(../images/snow-pile-removebg.png) no-repeat bottom center ;;
+  background: url(../images/snow.png) no-repeat center center;
   background-size: contain;
-  content: '';
+  content: "";
   width: 100%;
-  height:70px;
+  height: 70px;
   position: absolute;
   z-index: 2;
-  bottom: -30px;
 }
 
+.hole-1:after,
+.hole-1 .walrus {
+  top: 60%;
+  left: 35%;
+}
+
+.hole-2:after,
+.hole-2 .walrus {
+  top: 120%;
+  left: 45%;
+}
+
+.hole-3:after,
+.hole-3 .walrus {
+  top: 110%;
+  left: 22%;
+}
+
+.hole-4:after,
+.hole-4 .walrus {
+  top: 200%;
+  left: 35%;
+}
+
+.hole-5:after,
+.hole-5 .walrus {
+  top: 220%;
+  left: 20%;
+}
+
+.hole-6:after,
+.hole-6 .walrus {
+  top: 195%;
+  right: 16%;
+}
+
+.hole-7:after,
+.hole-7 .walrus {
+  top: 220%;
+  right: 42%;
+}
+
+.hole-8:after,
+.hole-8 .walrus {
+  top: 235%;
+  left: 3%;
+}
 
 /* Walrus */
 
 .walrus {
-    background: url(../images/walrus-removebg.png) no-repeat bottom center;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    transition: all 1s;
-    transform: scale(0.9);
-    top: 100%;
+  /* display: none; */
+  background: url(../images/walrus.png) no-repeat bottom center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transition: all 20ms;
+  transform: scale(0.9);
+  visibility: hidden;
+  opacity: 0;
 }
 
-.hole.up .walrus  {
-    top: 0;
-    transform: scale(1);
+/* When class hole has the up class, apply this to walrus */
+
+.hole.up .walrus {
+  /* display: inline-block; */
+  top: 0;
+  transform: scale(1);
+  visibility: visible;
+  opacity: 1;
+}
+
+.hole-2.up .walrus {
+  top: 60%;
+}
+
+.hole-3.up .walrus {
+  top: 50%;
+}
+
+.hole-4.up .walrus {
+  top: 140%;
+}
+
+.hole-5.up .walrus {
+  top: 160%;
+}
+
+.hole-6.up .walrus {
+  top: 135%;
+}
+
+.hole-7.up .walrus {
+  top: 160%;
+}
+
+.hole-8.up .walrus {
+  top: 175%;
 }
 
 /* Time and Score */
+
+.info-box {
+  font-family: "Amatic SC", cursive;
+  font-size: 2em;
+  font-weight: 700;
+  color: #10100e;
+  display: table-cell;
+  vertical-align: middle;
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+
 .box {
-    width: 50px;
-    height: 20px;
-    margin-left: 25px;
-    display: inline-block;
-    background-color: #fff;
+  width: 50px;
+  margin-left: 0.5em;
+  display: inline-block;
+  background-color: #03798a;
+  border: 1px solid #10100e;
+  border-radius: 10px;
+}
+
+.score {
+  text-align: end;
+}
+
+.blue {
+  font-family: "Londrina Solid", cursive;
+  text-shadow: 2px 2px #10100e;
+  color: #03798a;
 }
