--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,32 @@ footer i:active {
     letter-spacing: 1.5px;
 }
 
+.highscore input {
+    padding: 2px;
+    background-color: #e9e9ec;
+    border-radius: 5px;
+    opacity: 0.9;
+}
+
+/* Remove yellow outline on input box */
+.highscore-input:hover,
+.highscore-input:focus,
+.highscore-input:active {
+    outline: 1px solid #9eadb5;
+}
+
+/*-- Autofill box not following style rules, Solution by Fareed Alnamrouti, transition solution by Nathan White on Stack Overflow --*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px #9eadb5 inset !important;
+}
+input:-webkit-autofill {
+  -webkit-text-fill-color: #9eadb5 !important;
+  transition: all 0s 50000s;
+}
+
 /* Add when leaderboard is clicked and remove on back button click */
 
 .card-board.scoreboard {
@@ -505,11 +531,16 @@ footer i:active {
   }
 
   .leaderboard {
-    font-size: 1em;
+    font-size: 1rem;
     width: 100px;
     letter-spacing: 1px;
     margin: 1em auto;
     margin-bottom: 0;
+  }
+
+  .highscore {
+    font-size: 1.4rem;
+    padding: 0.3rem;
   }
 
   .break {
@@ -517,7 +548,7 @@ footer i:active {
   }
 
   .story {
-    font-size: 1em;
+    font-size: 1rem;
   }
 
   .btn-game {
