Readme updated, local storage printing to leaderboard(after a game is played), audio fo whack added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ body {
 
 footer {
   background-color: #e9e9ec;
-  width: fit-content;
+  display: table;
   max-height: 100px;
   margin: 1em auto;
   font-family: "Amatic SC", cursive;
